feat(backend-init): reorganize backend structure and update core configStatus